--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Find the lyrics of your favourite music all at one place | Subin Adhikari </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
